add flag based on availability logic, remove flag some records from leve csv